--- a/_sass/components/_panels.scss
+++ b/_sass/components/_panels.scss
@@ -1,4 +1,4 @@
 .panel {
 	@include margin(null auto em(20px) auto);
-	padding: 1em 2.5%;
+	padding: 0em 2.5% 1em 2.5%;
 }
