--- a/_sass/utils/_bootstrap-variables.scss
+++ b/_sass/utils/_bootstrap-variables.scss
@@ -368,7 +368,7 @@ $container-lg:                 $container-large-desktop !default;
 
 // Basics of a navbar
 $navbar-height:                    50px !default;
-$navbar-margin-bottom:             20px;
+$navbar-margin-bottom:             0px;
 $navbar-border-radius:             0;
 $navbar-padding-horizontal:        floor(($grid-gutter-width / 2)) !default;
 $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2) !default;
